#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- =corfu-quick=: Use a slightly different scheme to support more candidates.

* Version 0.38 (2023-08-14)

- =corfu-quick=: Bugfix.
- =corfu-mode-map=: Add mode map.
- Replace =corfu-excluded-modes= with =global-corfu-modes=, the Emacs 28 convention
  for globalized minor modes.

* Version 0.37 (2023-07-02)

- Bugfixes.
- Improve child frame display code, =corfu--popup-show= takes a =posn= argument.
- Ensure that the popup font matches the font of the parent frame.
- Close popup when window selection changes.
- Remove =corfu-history-length=. Instead set the =history-length= property of
  =corfu-history= variable.
- =corfu-info-documentation=, =corfu-info-location=: Make buffer and window
  persistent if called with prefix argument.

* Version 0.36 (2023-03-27)

- Drop obsolete =corfu-preselect-first=.
- =corfu-popupinfo-delay= and =corfu-echo-delay=: Remove support for value =t=.
  Instant updates are not recommended. It is still possible to use a small value
  for the delay.
- Rename =corfu-excluded-modes= to =corfu-exclude-modes= (Naming convention).
- Remove call to =undo-boundary=, which caused issues with auto completion.

* Version 0.35 (2023-02-17)

- =corfu-popupinfo=: Take more text into account when computing popup width.
- =corfu-popupinfo=: Change keybindings, remap =corfu-info-documentation/location=.
- =corfu-popupinfo=: Add commands =corfu-popupinfo-beginning/end=.
- =corfu-popupinfo=: Improve popup placement.
- Add =corfu-prompt-beginning= and =corfu-prompt-end= commands.
- Add =corfu-preselect= option, deprecate =corfu-preselect-first=.
- Use =cl-defgeneric= internally as mechanism to allow extensions to override
  functionality, e.g., the candidate formatting and display.

* Version 0.34 (2022-12-03)

- Bugfixes
- Popup frame code updated for Emacs 29. Please report any issues.
- =corfu-popupinfo-direction=: Variable must be a list of directions.