@@ -1142,9 +1142,14 @@ there hasn't been any input, then quit."
         (corfu--goto -1)
         (setq this-command #'corfu-first))
     ;; Cancel all changes and start new change group.
-    (cancel-change-group corfu--change-group)
-    (activate-change-group (setq corfu--change-group (prepare-change-group)))
-    (when (eq last-command #'corfu-reset) (corfu-quit))))
+    (pcase-let* ((`(,beg ,end . ,_) completion-in-region--data)
+                 (str (buffer-substring-no-properties beg end)))
+      (cancel-change-group corfu--change-group)
+      (activate-change-group (setq corfu--change-group (prepare-change-group)))
+      ;; Quit when resetting again or if input did not change.
+      (when (or (eq last-command #'corfu-reset)
+                (equal str (buffer-substring-no-properties beg end)))
+        (corfu-quit)))))
 
 (defun corfu-insert-separator ()
   "Insert a separator character, inhibiting quit on completion boundary.
