@@ -5,6 +5,7 @@
 * Development
 
 - =corfu-quick=: Use a slightly different scheme to support more candidates.
+- =corfu-reset=: Quit immediately if input did not change.
 
 * Version 0.38 (2023-08-14)
 
